conformance/tests/tcproute-multiple-routes-attachment.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcp-attach-backend-1
  namespace: gateway-conformance-infra
  labels:
    app: tcp-attach-backend-1
spec:
  selector:
    app: tcp-attach-backend-1
  ports:
    - name: tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-attach-backend-1
  namespace: gateway-conformance-infra
  labels:
    app: tcp-attach-backend-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-attach-backend-1
  template:
    metadata:
      labels:
        app: tcp-attach-backend-1
    spec:
      containers:
        - name: tcp-backend
          image: registry.k8s.io/gateway-api/conformance/echo-basic:v0.2.0
          imagePullPolicy: IfNotPresent
          env:
            - name: TCP_ECHO_SERVER
              value: "1"
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: tcp-attach-backend-1
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 10m
---
apiVersion: v1
kind: Service
metadata:
  name: tcp-attach-backend-2
  namespace: gateway-conformance-infra
  labels:
    app: tcp-attach-backend-2
spec:
  selector:
    app: tcp-attach-backend-2
  ports:
    - name: tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-attach-backend-2
  namespace: gateway-conformance-infra
  labels:
    app: tcp-attach-backend-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-attach-backend-2
  template:
    metadata:
      labels:
        app: tcp-attach-backend-2
    spec:
      containers:
        - name: tcp-backend
          image: registry.k8s.io/gateway-api/conformance/echo-basic:v0.2.0
          imagePullPolicy: IfNotPresent
          env:
            - name: TCP_ECHO_SERVER
              value: "1"
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: tcp-attach-backend-2
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 10m
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tcp-multi-route-attach-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: tcp
      protocol: TCP
      port: 9310
      allowedRoutes:
        kinds:
          - kind: TCPRoute
            group: gateway.networking.k8s.io
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcproute-attach-older
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: tcp-multi-route-attach-gateway
      sectionName: tcp
  rules:
    - backendRefs:
        - name: tcp-attach-backend-1
          port: 3000
